--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,3 +2,5 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/seckill?characterEncoding=utf8&useSSL=true
 jdbc.username=root
 jdbc.password=root
+
+#this is dev branch version
