--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -3,4 +3,4 @@ jdbc.url=jdbc:mysql://127.0.0.1:3306/seckill?characterEncoding=utf8&useSSL=true
 jdbc.username=root
 jdbc.password=root
 
-#this is dev branch version
+#this is dev branch version test conflict
